Add setting to enable segment replication as default replication type.
Signed-off-by: Rishikesh1159 <rishireddy1159@gmail.com>