@@ -283,6 +283,16 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
     );
 
     /**
+     * Used to specify SEGMENT replication type as default for all indices. By default, this is false.
+     */
+    public static final Setting<Boolean> DEFAULT_REPLICATION_TYPE_SETTING_SEGMENT = Setting.boolSetting(
+        "opensearch.index.default.replication.type.segment",
+        false,
+        Property.NodeScope,
+        Property.Final
+    );
+
+    /**
      * Used to specify the replication type for the index. By default, document replication is used.
      */
     public static final String SETTING_REPLICATION_TYPE = "index.replication.type";
@@ -317,8 +327,9 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
 
             @Override
             public void validate(final Boolean value, final Map<Setting<?>, Object> settings) {
+                final Object isDefaultReplicationTypeEnabled = settings.get(DEFAULT_REPLICATION_TYPE_SETTING_SEGMENT);
                 final Object replicationType = settings.get(INDEX_REPLICATION_TYPE_SETTING);
-                if (replicationType != ReplicationType.SEGMENT && value == true) {
+                if (replicationType != ReplicationType.SEGMENT && isDefaultReplicationTypeEnabled == Boolean.FALSE && value == true) {
                     throw new IllegalArgumentException(
                         "To enable "
                             + INDEX_REMOTE_STORE_ENABLED_SETTING.getKey()
@@ -326,13 +337,17 @@ public class IndexMetadata implements Diffable<IndexMetadata>, ToXContentFragmen
                             + INDEX_REPLICATION_TYPE_SETTING.getKey()
                             + " should be set to "
                             + ReplicationType.SEGMENT
+                            + "or "
+                            + DEFAULT_REPLICATION_TYPE_SETTING_SEGMENT.getKey()
+                            + " should be set to "
+                            + Boolean.TRUE
                     );
                 }
             }
 
             @Override
             public Iterator<Setting<?>> settings() {
-                final List<Setting<?>> settings = Collections.singletonList(INDEX_REPLICATION_TYPE_SETTING);
+                final List<Setting<?>> settings = List.of(INDEX_REPLICATION_TYPE_SETTING, DEFAULT_REPLICATION_TYPE_SETTING_SEGMENT);
                 return settings.iterator();
             }
         },
